# api/app/controllers/produtos_controller.rb
@@ -62,10 +62,10 @@ class ProdutosController < ApplicationController
   private
 
   def set_produto
-    @produto = Produto.find(params[:id])
+    @produto = Produto.find_by!(slug: params[:slug])
   end
 
   def produto_params
-    params.require(:produto).permit(:nome, :descricao, :preco, :categoria_id, :status)
+    params.require(:produto).permit(:nome, :slug, :descricao, :preco, :categoria_id, :status)
   end
 end
