# api/app/serializers/produto_serializer.rb
@@ -1,4 +1,4 @@
 class ProdutoSerializer < ActiveModel::Serializer
-  attributes :id, :nome, :slug, :descricao, :preco, :status
+  attributes :slug, :nome, :descricao, :preco, :status
   has_one :categoria
 end
